bad/assign_arr_elem_int_class.example_compiler_output
ERROR
[1mbad/assign_arr_elem_int_class.lat:6:18: [1;31merror: [0;1massigning to `int` from incompatible type `Y`[m
	(new int[3])[1] = new Y;
	                [1;32m^[m
